angular setting up routing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,4 +3,14 @@
     background-color: #559EE0; 
 }
 
+h1{
+    color: white;
+}
 
+body{
+    background-color: #559EE0;
+    
+    overflow: auto;
+    height: 100% !important;
+    width: 100% !important; 
+}
