Started blocking out app mainpage

--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -1,1 +1,16 @@
-<p>mainpage works!</p>
+
+<div class="container-fluid h-100">
+    <div class="row vh-100">
+        
+        <!--Add media col-->
+        <div class="col color1 text-center">
+            <button class="round-button align-middle"> </button>
+        </div>
+
+        <!--Steps col-->
+        <div class="col-8 color2">
+            a
+        </div>
+
+    </div>
+</div>
